[~] Изменены формы для рассторжения договора и изменения срока договора
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@2402 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-contracts/share/src/main/java/ru/it/lecm/contracts/contracts.properties
+++ b/lecm-contracts/share/src/main/java/ru/it/lecm/contracts/contracts.properties
@@ -25,10 +25,11 @@ contract.additionalDocumentType=Document type
 contract.deleteReason=Delete Reason
 
 contract.contractTime.baseOnDocument=Reason
-contract.contractTime.link=\u0414\u043e\u043a\u0443\u043c\u0435\u043d\u0442 \u043a \u0434\u043e\u0433\u043e\u0432\u043e\u0440\u0443
-contract.contractTime.attachment=\u041f\u0440\u0438\u043b\u043e\u0436\u0435\u043d\u043d\u044b\u0439 \u043e\u0431\u0440\u0430\u0437 \u0434\u043e\u043a\u0443\u043c\u0435\u043d\u0442\u0430
-contract.contractTime.fromTime=\u041d\u0430\u0447\u0430\u043b\u043e \u0434\u0435\u0439\u0441\u0442\u0432\u0438\u044f
-contract.contractTime.toTime=\u0417\u0430\u0432\u0435\u0440\u0448\u0435\u043d\u0438\u0435 \u0434\u0435\u0439\u0441\u0442\u0432\u0438\u044f
+contract.contractTime.link=\u0414\u043E\u043A\u0443\u043C\u0435\u043D\u0442 \u043A \u0434\u043E\u0433\u043E\u0432\u043E\u0440\u0443
+contract.contractTime.attachment=\u041F\u0440\u0438\u043B\u043E\u0436\u0435\u043D\u043D\u044B\u0439 \u043E\u0431\u0440\u0430\u0437 \u0434\u043E\u043A\u0443\u043C\u0435\u043D\u0442\u0430
+contract.contractTime.fromTime=\u041D\u0430\u0447\u0430\u043B\u043E \u0434\u0435\u0439\u0441\u0442\u0432\u0438\u044F
+contract.contractTime.toTime=\u0417\u0430\u0432\u0435\u0440\u0448\u0435\u043D\u0438\u0435 \u0434\u0435\u0439\u0441\u0442\u0432\u0438\u044F
+contract.contractTime.unlimited=Unlimited
 
 contract.contractTermination.baseOnDocument=Reason
 
