[~]Переименовал свойство в модели.
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@2403 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-contracts/repo/src/main/config/messages/lecm-contracts-model.properties
+++ b/lecm-contracts/repo/src/main/config/messages/lecm-contracts-model.properties
@@ -20,8 +20,8 @@ lecm-contract_model.property.lecm-contract_signedCounterparty.title=Signed by co
 lecm-contract_model.property.lecm-contract_signedCounterparty.description=Signed by counterparty
 lecm-contract_model.property.lecm-contract_signatoryCounterparty.title=Counterparty signer
 lecm-contract_model.property.lecm-contract_signatoryCounterparty.description=Counterparty signer
-lecm-contract_model.property.lecm-contract_totalSum.title=Total sum
-lecm-contract_model.property.lecm-contract_totalSum.description=The total sum of the contract
+lecm-contract_model.property.lecm-contract_totalAmount.title=Total sum
+lecm-contract_model.property.lecm-contract_totalAmount.description=The total sum of the contract
 lecm-contract_model.property.lecm-contract_startDate.title=Start date
 lecm-contract_model.property.lecm-contract_startDate.description=Start date of the contract
 lecm-contract_model.property.lecm-contract_endDate.title=End date
