ALF-823 Процессы согласования: изменение дизайна формы процесса
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@2411 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-approval/repo/src/main/config/messages/lecm-sequential-approval-workflow-model.properties
+++ b/lecm-approval/repo/src/main/config/messages/lecm-sequential-approval-workflow-model.properties
@@ -1,5 +1,5 @@
-lecmSeq_sequentialApprovalWorkflow.lecmSeq_sequentialApproval.title=Sequential approvement
-lecmSeq_sequentialApprovalWorkflow.lecmSeq_sequentialApproval.description=Sequential approvement
+lecmSeq_sequentialApprovalWorkflow.type.lecmSeq_sequentialApproval.title=Sequential approvement
+lecmSeq_sequentialApprovalWorkflow.type.lecmSeq_sequentialApproval.description=Sequential approvement
 lecmSeq_sequentialApprovalWorkflow.association.lecmSeq_employeesAssoc.title=\u0421laim
 lecmSeq_sequentialApprovalWorkflow.association.lecmSeq_employeesAssoc.description=\u0421laim
 listconstraint.lecmSeq_approveTaskResultConstraint.APPROVED=Approve
