--- a/lecm-approval/share/src/main/java/ru/it/lecm/approval/form/form.properties
+++ b/lecm-approval/share/src/main/java/ru/it/lecm/approval/form/form.properties
@@ -8,3 +8,6 @@ ru.it.approval.force=\u0412\u044B \u0434\u0435\u0439\u0441\u0442\u0432\u0438\u04
 label.attachments=Attachments
 label.approvalList=Approval List
 
+approvalList.report.success=Report formed succesfully
+approvalList.report.failure=Report failed
+
