--- a/lecm-approval/repo/src/main/config/messages/lecm-parallel-approval-workflow-model.properties
+++ b/lecm-approval/repo/src/main/config/messages/lecm-parallel-approval-workflow-model.properties
@@ -1,8 +1,11 @@
-lecmPar_parallelApprovalWorkflow.lecmPar_parallelApproval.title=Parallel approvement
-lecmPar_parallelApprovalWorkflow.lecmPar_parallelApproval.description=Parallel approvement
+lecmPar_parallelApprovalWorkflow.type.lecmPar_parallelApproval.title=Parallel approvement
+lecmPar_parallelApprovalWorkflow.type.lecmPar_parallelApproval.description=Parallel approvement
 lecmPar_parallelApprovalWorkflow.association.lecmPar_employeesAssoc.title=\u0421laim
 lecmPar_parallelApprovalWorkflow.association.lecmPar_employeesAssoc.description=\u0421laim
 listconstraint.lecmPar_approveTaskResultConstraint.APPROVED=Approve
 listconstraint.lecmPar_approveTaskResultConstraint.APPROVED_WITH_REMARK=Approve with remark
 listconstraint.lecmPar_approveTaskResultConstraint.REJECTED=Reject
 lecmPar_parallelApprovalWorkflow.association.lecmPar_approveTaskCommentAssoc.title=Document with comments
+
+lecmPar_parallelApprovalWorkflow.type.lecmPar_approveTask.title=Parallel Approve Task
+lecmPar_parallelApprovalWorkflow.type.lecmPar_approveTask.description=Parallel Approve Task
