Контрол для загрузки замечаний по согласованию
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@2412 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-base/share/src/main/java/ru/it/lecm/base-share/base-share.properties
+++ b/lecm-base/share/src/main/java/ru/it/lecm/base-share/base-share.properties
@@ -19,3 +19,4 @@ message.delete.success=Item was deleted
 logicecm.base.message.enter-search-text=Enter search text
 
 contract.daterange= Date range
+lecm.form.upload= Upload
