--- a/lecm-delegation/repo/pom.xml
+++ b/lecm-delegation/repo/pom.xml
@@ -79,6 +79,12 @@
 			<version>${project.version}</version>
 			<scope>provided</scope>
 		</dependency>
+        <dependency>
+            <groupId>ru.it.lecm.dictionary</groupId>
+            <artifactId>dictionary-repo-api</artifactId>
+            <version>${project.version}</version>
+            <scope>provided</scope>
+        </dependency>
 
 		<!-- Don't add here amp dependencies as it will break amp packaging -->
 	</dependencies>
