--- a/lecm-contracts/repo/src/main/config/messages/lecm-contracts-model.properties
+++ b/lecm-contracts/repo/src/main/config/messages/lecm-contracts-model.properties
@@ -1,7 +1,9 @@
 lecm-contract_model.type.lecm-contract_document.title=Contract document
 lecm-contract_model.type.lecm-contract_document.description=Contract document
-lecm-contract_model.property.cm_name.title=Name
-lecm-contract_model.property.cm_name.description=Name
+cm_contentmodel.property.cm_name.title=Name
+cm_contentmodel.property.cm_name.description=Name
+cm_contentmodel.property.cm_creator.title=Author
+cm_contentmodel.property.cm_creator.description=Author
 lecm-contract_model.property.lecm-contract_regNumProject.title=Registration number of the draft contract
 lecm-contract_model.property.lecm-contract_regNumProject.description=Registration number of the draft contract
 lecm-contract_model.property.lecm-contract_regNumSystem.title=Registration number
