--- a/lecm-documents/repo/src/main/config/messages/lecm-documents.properties
+++ b/lecm-documents/repo/src/main/config/messages/lecm-documents.properties
@@ -1,5 +1,7 @@
 lecm-document_model.property.lecm-document_regnum.title=Registration number
 lecm-document_model.property.lecm-document_regnum.description=Registration number
+lecm-document_model.property.lecm-document_creator.title=Author
+lecm-document_model.property.lecm-document_creator.description=Author
 
 lecm-connect_dictionary-connection.type.lecm-connect_connection.title=Connections
 lecm-connect_dictionary-connection.association.lecm-connect_primary-document-assoc.title=Primary document
