ALF-837 Изменены наименования АРМ "Договора"
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@2446 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-contracts/share/src/main/resources/alfresco/site-webscripts/ru/it/lecm/contracts/dashlets/contracts/contracts.get.properties
+++ b/lecm-contracts/share/src/main/resources/alfresco/site-webscripts/ru/it/lecm/contracts/dashlets/contracts/contracts.get.properties
@@ -1,7 +1,7 @@
 header=Contracts
 label.load-failed=Could not load contracts list
 label.filter=Show
-dashlet.arm.tooltip=ARM
+dashlet.arm.tooltip=Go to the control panel instruments
 dashlet.add.tooltip=Add New
 dashlet.add.contract=Add New Contract
 
