--- a/lecm-approval/repo/src/main/config/messages/lecm-parallel-approval-workflow-model.properties
+++ b/lecm-approval/repo/src/main/config/messages/lecm-parallel-approval-workflow-model.properties
@@ -7,5 +7,5 @@ listconstraint.lecmPar_approveTaskResultConstraint.APPROVED_WITH_REMARK=Approve 
 listconstraint.lecmPar_approveTaskResultConstraint.REJECTED=Reject
 lecmPar_parallelApprovalWorkflow.association.lecmPar_approveTaskCommentAssoc.title=Document with comments
 
-lecmPar_parallelApprovalWorkflow.type.lecmPar_approveTask.title=Parallel Approve Task
-lecmPar_parallelApprovalWorkflow.type.lecmPar_approveTask.description=Parallel Approve Task
+lecmPar_parallelApprovalWorkflow.type.lecmPar_approveTask.title=Approve document
+lecmPar_parallelApprovalWorkflow.type.lecmPar_approveTask.description=Approve document
