--- a/lecm-approval/repo/src/main/config/messages/lecm-sequential-approval-workflow-model.properties
+++ b/lecm-approval/repo/src/main/config/messages/lecm-sequential-approval-workflow-model.properties
@@ -6,3 +6,6 @@ listconstraint.lecmSeq_approveTaskResultConstraint.APPROVED=Approve
 listconstraint.lecmSeq_approveTaskResultConstraint.APPROVED_WITH_REMARK=Approve with remark
 listconstraint.lecmSeq_approveTaskResultConstraint.REJECTED=Reject
 lecmSeq_sequentialApprovalWorkflow.association.lecmSeq_approveTaskCommentAssoc.title=Document with comments
+
+lecmSeq_sequentialApprovalWorkflow.type.lecmSeq_approveTask.title=Approve document
+lecmSeq_sequentialApprovalWorkflow.type.lecmSeq_approveTask.description=Approve document
