ALF-852: Некорректное отображение карточки контрагента при создании из карточки договора
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@2463 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-base/share/src/main/java/ru/it/lecm/base-share/base-share.properties
+++ b/lecm-base/share/src/main/java/ru/it/lecm/base-share/base-share.properties
@@ -20,3 +20,4 @@ logicecm.base.message.enter-search-text=Enter search text
 
 contract.daterange= Date range
 lecm.form.upload= Upload
+dialog.createNew.title=Create new
