--- a/lecm-approval/repo/src/main/config/messages/lecm-custom-approval-workflow-model.properties
+++ b/lecm-approval/repo/src/main/config/messages/lecm-custom-approval-workflow-model.properties
@@ -2,3 +2,7 @@ lecmCustom_customApprovalWorkflow.lecmCustom_customApproval.title=Custom Approva
 lecmCustom_customApprovalWorkflow.lecmCustom_customApproval.description=Custom Approval
 lecmCustom_customApprovalWorkflow.association.lecmCustom_employeesAssoc.title=\u0421laim
 lecmCustom_customApprovalWorkflow.association.lecmCustom_employeesAssoc.description=\u0421laim
+
+listconstraint.lecmCustom_approveTaskResultConstraint.APPROVED=Approve
+listconstraint.lecmCustom_approveTaskResultConstraint.APPROVED_WITH_REMARK=Approve with remark
+listconstraint.lecmCustom_approveTaskResultConstraint.REJECTED=Reject
