ALF-854: В список согласования нужно добавить ссылку на приложенный документ с замечаниями
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@2472 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-approval/share/src/main/java/ru/it/lecm/approval/form/form.properties
+++ b/lecm-approval/share/src/main/java/ru/it/lecm/approval/form/form.properties
@@ -11,4 +11,5 @@ label.approvalList=Approval List
 
 approvalList.report.success=Report formed succesfully
 approvalList.report.failure=Report failed
+field.comment.file=File
 
