--- a/lecm-contracts/repo/src/main/config/messages/lecm-contracts-reports-form-model.properties
+++ b/lecm-contracts/repo/src/main/config/messages/lecm-contracts-reports-form-model.properties
@@ -1,6 +1,8 @@
 #<type name="lecm-contract-reports:contracts-list-report">
-lecm-contract-reports_reports-forms.property.lecm-contract-reports_contracts-list-start.title=Report date start
-lecm-contract-reports_reports-forms.property.lecm-contract-reports_contracts-list-end.title=Report date end
+lecm-contract-reports_reports-forms.property.lecm-contract-reports_contracts-list-start-after.title=Report started after
+lecm-contract-reports_reports-forms.property.lecm-contract-reports_contracts-list-start-before.title=Report started before
+lecm-contract-reports_reports-forms.property.lecm-contract-reports_contracts-list-end-after.title=Report ends after
+lecm-contract-reports_reports-forms.property.lecm-contract-reports_contracts-list-end-before.title=Report ends before
 lecm-contract-reports_reports-forms.property.lecm-contract-reports_contracts-list-actual-only.title=Anly actual
 lecm-contract-reports_reports-forms.property.lecm-contract-reports_contracts-list-sum.title=Sum
 
@@ -10,3 +12,4 @@ lecm-contract-reports_reports-forms.association.lecm-contract-reports_contracts-
 
 lecm-contract-reports_reports-forms.property.lecm-contract-reports_approval-discipline-start.title=Report date start
 lecm-contract-reports_reports-forms.property.lecm-contract-reports_approval-discipline-end.title=Report date end
+
