ALF-835 Некорректная работа действия "Подписание контрагентом"
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@2478 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-contracts/repo/src/main/config/messages/lecm-contracts-workflow.properties
+++ b/lecm-contracts/repo/src/main/config/messages/lecm-contracts-workflow.properties
@@ -2,7 +2,9 @@ lecmContractWf_model.type.lecmContractWf_createOnBasis.title=Create Document On 
 lecmContractWf_model.type.lecmContractWf_createOnBasis.description=Create Document On The Basis
 lecm-lecmContractWf_model.association.lecmContractWf_documentType.title=Document type
 lecm-lecmContractWf_model.association.lecmContractWf_documentType.description=Document type
-lecmContractWf_model.type.lecmContractWf_createOnBasis.title=Create Document On The Basis
 lecmContractWf_model.type.lecmContractWf_deleteReasonTask.title=Delete Reason
 lecm-lecmContractWf_model.association.lecmContractWf_deleteReason.title=Delete Reason
 lecm-lecmContractWf_model.association.lecmContractWf_deleteReason.description=Delete Reason
+
+lecmContractWf_model.property.lecmContractWf_contractorSigner.title=Contractor Signer
+lecmContractWf_model.property.lecmContractWf_contractorSigner.description=Contractor Signer
