ALF-861: Добавить группу привилегий "Выполняющий действия"
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@2499 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-security/repo/src/main/config/messages/security.properties
+++ b/lecm-security/repo/src/main/config/messages/security.properties
@@ -21,3 +21,4 @@ lecm.roles.LECM_BASIC_PG_Administrator=Administrator
 lecm.roles.LECM_BASIC_PG_Reviewer=Reviewer
 lecm.roles.LECM_BASIC_PG_InputCorrector=Input Corrector
 lecm.roles.LECM_BASIC_PG_Employee=Employee
+lecm.roles.LECM_BASIC_PG_ActionPerformer=Action performer
