В трёх Отчётах поправлено: 1) перенос на несколько строк длинных значений в ячейках 2) "исчезновение" заголовков столбцов на второй и последующих страницах 3) большой вертикальный пропуск в таблицах на каждой странице 4) артефакты отчётов.
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@2517 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-contracts/repo/src/main/config/messages/lecm-contracts-reports-form-model.properties
+++ b/lecm-contracts/repo/src/main/config/messages/lecm-contracts-reports-form-model.properties
@@ -1,8 +1,8 @@
 #<type name="lecm-contract-reports:contracts-list-report">
-lecm-contract-reports_reports-forms.property.lecm-contract-reports_contracts-list-start-after.title=Period start   From
+lecm-contract-reports_reports-forms.property.lecm-contract-reports_contracts-list-start-after.title=Period start from
 lecm-contract-reports_reports-forms.property.lecm-contract-reports_contracts-list-start-before.title=To
 
-lecm-contract-reports_reports-forms.property.lecm-contract-reports_contracts-list-end-after.title=Period end  From
+lecm-contract-reports_reports-forms.property.lecm-contract-reports_contracts-list-end-after.title=Period end from
 lecm-contract-reports_reports-forms.property.lecm-contract-reports_contracts-list-end-before.title=To
 
 lecm-contract-reports_reports-forms.property.lecm-contract-reports_contracts-list-actual-only.title=Anly actual
