[+]: Форма последовательного согласования
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@2539 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-approval/repo/src/main/config/messages/lecm-approval-list.properties
+++ b/lecm-approval/repo/src/main/config/messages/lecm-approval-list.properties
@@ -36,4 +36,12 @@ listconstraint.lecm-al_approval-list-decision-constraint.APPROVED_WITH_REMARK=Ap
 listconstraint.lecm-al_approval-list-decision-constraint.REJECTED_FORCE=Rejected Force
 listconstraint.lecm-al_approval-list-decision-constraint.APPROVED_FORCE=Approved Force
 
+lecm-al_approval-list-model.type.lecm-al_assignees-item.title=Assignees Item
+lecm-al_approval-list-model.type.lecm-al_assignees-list.title=Assignees List
 
+lecm-al_approval-list-model.property.lecm-al_assignees-item-order.title=Order
+lecm-al_approval-list-model.property.lecm-al_assignees-item-due-date.title=Due Date
+lecm-al_approval-list-model.property.lecm-al_userName.title=User Name
+
+lecm-al_approval-list-model.association.lecm-al_assignees-item-employee-assoc.title=Employee
+lecm-al_approval-list-model.association.lecm-al_assignees-list-contains-assignees-item.title=Items
