--- a/server/alfresco/pom.xml
+++ b/server/alfresco/pom.xml
@@ -129,6 +129,13 @@
 			<type>amp</type>
 		</dependency>
 		<dependency>
+			<groupId>ru.it.lecm.experts</groupId>
+			<artifactId>experts-repo</artifactId>
+			<version>${platform.version}</version>
+			<scope>runtime</scope>
+			<type>amp</type>
+		</dependency>
+		<dependency>
 			<groupId>ru.it.lecm.forms.jasperforms</groupId>
 			<artifactId>jasperforms-repo</artifactId>
 			<version>${platform.version}</version>
