ALF-690 3.3.13 Просмотр сводной информации о работе сотрудников. В сервис Рабочий календарь добавлен функционал для просмотра сводной информации о рабочих днях сотрудников.
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@2604 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-calendar/share/src/main/java/ru/it/lecm/wcalendar/form/form.properties
+++ b/lecm-calendar/share/src/main/java/ru/it/lecm/wcalendar/form/form.properties
@@ -87,3 +87,7 @@ message.absence.cancel-absence.success=Absence cancelled
 message.error.absence.date-interval-validation.early-begin=Absence beginnig is earlier than today's date
 message.error.absence.date-interval-validation.early-end=Absence end is earlier than its beginning
 message.error.absence.date-interval-validation.already-planned=Absence is already planned on this date
+
+page.working-days-summary.title=Work Calendar > Employees' work summary table
+page.working-days-summary.description=Employees' working days summary table
+label.wcalendar.menu.working-days-summary.btn=Work summary table
