ALF-904 Расширение карточки сотрудника - возможность просмотреть, в какие бизнес-роли он входит.
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@2627 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-orgstructure/share/src/main/java/ru/it/lecm/orgstructure/form/form.properties
+++ b/lecm-orgstructure/share/src/main/java/ru/it/lecm/orgstructure/form/form.properties
@@ -22,6 +22,7 @@ info.personal-info=Personal info
 info.personal-positions=Employee Positions
 info.personal-groups=Employee Groups
 info.business-journal-history=History
+info.business-roles=Business Roles
 
 message.employee.add.success=Employee successfully added
 message.employee.add.failure=Employee add failed
@@ -59,6 +60,7 @@ lecm-orgstr_staff-unit=Unit
 lecm-orgstr_boss=Boss
 lecm-orgstr_employee=Employee
 lecm-orgstr_primary-position=Is Primary
+lecm-orgstr_employee-business-roles=Busines Roles
 
 lecm-validation-uniqueness-help-id=The field should be unique
 lecm-validation-number-uniqueness-help-id=The field can contain only digits and should be unique
