--- a/lecm-contracts/share/src/main/resources/alfresco/site-webscripts/ru/it/lecm/contracts/contracts_docs_filter/filter.get.properties
+++ b/lecm-contracts/share/src/main/resources/alfresco/site-webscripts/ru/it/lecm/contracts/contracts_docs_filter/filter.get.properties
@@ -2,5 +2,6 @@ filter.type.ALL=All
 filter.type.AGREEMENTS=Agreements
 filter.type.CHANGES=Changes
 filter.type.TERMINATIONS=Terminations
+filter.type.CONTROVERSY=Controversy
 
 label.contracts_docs=Contracts Documents
