--- a/lecm-orgstructure/share/src/main/resources/alfresco/site-webscripts/ru/it/lecm/orgstructure/structure/org.structure.get.properties
+++ b/lecm-orgstructure/share/src/main/resources/alfresco/site-webscripts/ru/it/lecm/orgstructure/structure/org.structure.get.properties
@@ -1,6 +1,7 @@
 message.delete.unit.success=Unit was successful deleted
 message.delete.unit.failure.has.children=Cannot delete unit. It has children units
 message.delete.unit.failure.has.composition=Cannot delete unit. It has employeeys in compositions
+message.delete.unit.failure.root.unit=Cannot delete unit. It is root unit
 message.delete.unit.error=Some error occured
 
 
