ALF-916 Одно подразделение первого уровня в оргструктуре [~] read-only свойства с руководителем в карточке Организации
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@2651 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-orgstructure/share/src/main/java/ru/it/lecm/orgstructure/form/form.properties
+++ b/lecm-orgstructure/share/src/main/java/ru/it/lecm/orgstructure/form/form.properties
@@ -64,3 +64,5 @@ lecm-orgstr_employee-business-roles=Busines Roles
 
 lecm-validation-uniqueness-help-id=The field should be unique
 lecm-validation-number-uniqueness-help-id=The field can contain only digits and should be unique
+
+lecm-orgstr_organization-boss=Boss
