ALF-924 Не показывать в событиях по договорам у руководителей информацию о событиях в черновиках документов подчиненных
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@2652 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-business-journal/repo/pom.xml
+++ b/lecm-business-journal/repo/pom.xml
@@ -64,6 +64,11 @@
             <version>${project.version}</version>
         </dependency>
         <dependency>
+            <groupId>ru.it.lecm.statemachine</groupId>
+            <artifactId>statemachine-api</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+        <dependency>
             <groupId>org.quartz-scheduler</groupId>
             <artifactId>quartz</artifactId>
         </dependency>
