ALF-930: В справочник "Доступные типы связи" добавлен список не лоступных типов связи
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@2653 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-documents/repo/src/main/config/messages/lecm-documents.properties
+++ b/lecm-documents/repo/src/main/config/messages/lecm-documents.properties
@@ -15,7 +15,8 @@ lecm-connect-types_dictionary-connection-types.property.lecm-connect-types_code.
 lecm-connect-types_dictionary-connection-types.type.lecm-connect-types_available-connection-type.title=Available connection type
 lecm-connect-types_dictionary-connection-types.property.lecm-connect-types_primary-document-type.title=Primary document type
 lecm-connect-types_dictionary-connection-types.property.lecm-connect-types_connected-document-type.title=Connected document type
-lecm-connect-types_dictionary-connection-types.association.lecm-connect-types_available-connection-types-assoc.title=Available connection types
+lecm-connect-types_dictionary-connection-types.association.lecm-connect-types_not-available-connection-types-assoc.title=Not available connection types
+lecm-connect-types_dictionary-connection-types.association.lecm-connect-types_recommended-connection-types-assoc.title=Recommended connection types
 lecm-connect-types_dictionary-connection-types.association.lecm-connect-types_default-connection-type-assoc.title=Default connection types
 
 lecm-doc-members_model.type.lecm-doc-members_member.title=Document Member
