исправление "падающего" таба на формах просмотра и редактирования сотрудника + небольшие изменения табов
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@2654 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-orgstructure/share/src/main/java/ru/it/lecm/orgstructure/form/form.properties
+++ b/lecm-orgstructure/share/src/main/java/ru/it/lecm/orgstructure/form/form.properties
@@ -19,8 +19,7 @@ info.main=Information
 info.more=More
 info.common-info=Common info
 info.personal-info=Personal info
-info.personal-positions=Employee Positions
-info.personal-groups=Employee Groups
+info.personal-positions-and-groups=Employee Positions/Groups
 info.business-journal-history=History
 info.business-roles=Business Roles
 
