ALF-907 Состав колонок в табличном представлении должен зависеть от статуса или группы
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@2656 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-contracts/share/src/main/java/ru/it/lecm/contracts/contracts.properties
+++ b/lecm-contracts/share/src/main/java/ru/it/lecm/contracts/contracts.properties
@@ -18,8 +18,10 @@ contract.regProjectNumber=Registration Project Number
 contract.regNumber=Registration Contract Number
 contract.parther=Parther
 contract.type=Type
+contract.subject=Subject
 contract.status=Status
 contract.conclusionDate=Date of contract
+contract.dateRegProject=Date of registration of the contract
 
 contract.additionalDocumentType=Document type
 contract.deleteReason=Delete Reason
