[+] ALF-911. Необходимо отображать оргструктуру в виде графа
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@2659 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-orgstructure/repo/pom.xml
+++ b/lecm-orgstructure/repo/pom.xml
@@ -118,8 +118,12 @@
             <version>${project.version}</version>
 			<scope>provided</scope>
 		</dependency>
+        <dependency>
+            <groupId>org.tinyjee.jgraphx</groupId>
+            <artifactId>jgraphx</artifactId>
+        </dependency>
 
-		<!-- Don't add here amp dependencies as it will break amp packaging -->
+        <!-- Don't add here amp dependencies as it will break amp packaging -->
     </dependencies>
     <!--
        The scm is required for the buildnumber-maven-plugin which is required
