[+] ALF-911. Необходимо отображать оргструктуру в виде графа
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@2673 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-orgstructure/share/src/main/resources/alfresco/site-webscripts/ru/it/lecm/orgstructure/toolbar/org.toolbar.get.properties
+++ b/lecm-orgstructure/share/src/main/resources/alfresco/site-webscripts/ru/it/lecm/orgstructure/toolbar/org.toolbar.get.properties
@@ -8,6 +8,7 @@ button.new-work-group=New Work Group
 button.new-work-force=New Work Force
 button.new-position=New Position
 button.new-role=New Role
+button.show_structure=Structure
 
 message.new-row.success=Successfully added new item
 message.new-row.failure=Could not add new item to the Dictionary
