--- a/lecm-statemachine/share/pom.xml
+++ b/lecm-statemachine/share/pom.xml
@@ -32,6 +32,15 @@
             <groupId>org.springframework</groupId>
             <artifactId>spring-beans</artifactId>
         </dependency>
+		<dependency>
+			<groupId>org.springframework.extensions.surf</groupId>
+			<artifactId>spring-webscripts</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>ru.it.lecm.statemachine</groupId>
+			<artifactId>statemachine-api</artifactId>
+			<version>${project.version}</version>
+		</dependency>
 		<!-- Don't add here amp dependencies as it will break amp packaging -->
 	</dependencies>
 
