1) ALF-426 5.4.5.7 Выбор сотрудника с индикатором доступности К контролу association-autocomplete-control.ftl обален параметр "employeeAbsenceMarker", который позволяет помечать отсутствующих сотрудников при выборе.
2) ALF-937 Доработка функции "Меня нет в офисе"
Добавлено поле Автоответ и флаг, включающий его использование.


git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@2700 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-calendar/repo/src/main/config/messages/calendar.properties
+++ b/lecm-calendar/repo/src/main/config/messages/calendar.properties
@@ -41,6 +41,11 @@ lecm-absence_absence-model.property.lecm-absence_code.title=Absence reason code
 #<property name="lecm-absence:color">
 lecm-absence_absence-model.property.lecm-absence_color.title=Absence reason color
 
+#<property name="lecm-absence:auto-answer-enabled">
+lecm-absence_absence-model.property.lecm-absence_auto-answer-enabled.title=Enable auto answer
+#<property name="lecm-absence:auto-answer-text">
+lecm-absence_absence-model.property.lecm-absence_auto-answer-text.title=Auto answer text
+
 #<model name="lecm-sched:schedule-model"
 lecm-sched_schedule-model.title=Schedule
 #<type name="lecm-sched:schedule">
