--- a/lecm-calendar/share/src/main/java/ru/it/lecm/wcalendar/form/form.properties
+++ b/lecm-calendar/share/src/main/java/ru/it/lecm/wcalendar/form/form.properties
@@ -67,6 +67,7 @@ button.new-my-absence=Add my absence
 button.new-employee-absence=Add employee absence
 label.absence.create-my-absence.title=My new absence
 label.absence.create-employee-absence.title=New employee absence
+title.absence.auto-answer.title=User message
 
 header.instant-absence.label=Out of office
 header.instant-absence.description=Declare my absence in office
