ALF-931 Передача документа
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@2707 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-contracts/share/src/main/java/ru/it/lecm/contracts/contracts.properties
+++ b/lecm-contracts/share/src/main/java/ru/it/lecm/contracts/contracts.properties
@@ -22,6 +22,9 @@ contract.subject=Subject
 contract.status=Status
 contract.conclusionDate=Date of contract
 contract.dateRegProject=Date of registration of the contract
+contract.istransmit=Is transmit right
+contract.creator-ref=Employee
+contract.deprive.right=Deprive the owner of rights
 
 contract.additionalDocumentType=Document type
 contract.deleteReason=Delete Reason
