--- a/lecm-documents/share/src/main/resources/alfresco/site-webscripts/ru/it/lecm/documents/components/header/document.header.get.properties
+++ b/lecm-documents/share/src/main/resources/alfresco/site-webscripts/ru/it/lecm/documents/components/header/document.header.get.properties
@@ -1,1 +1,5 @@
 banner.not-found=The item cannot be found. Either it has been removed or it has never existed.
+button.transfer.right=Transfer of
+label.transfer.edit.title=Transfer of
+message.transfer.edit.success=transfer is good
+message.transfer.edit.failure=failure transfer of document
