[ALF-935] отчёт "Досье договора", осталось обеспечить точку вызова
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@2724 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-security/api/pom.xml
+++ b/lecm-security/api/pom.xml
@@ -18,7 +18,7 @@
 
 	<properties>
 		<module.log.level>info</module.log.level>
-		<alfproject.version>4.0.c</alfproject.version>
+		<alfproject.version>4.0</alfproject.version>
 	</properties>
 	<!--
 		need to list these as a provided so that Maven doesn't download them
