--- a/lecm-contracts/repo/pom.xml
+++ b/lecm-contracts/repo/pom.xml
@@ -119,8 +119,8 @@
 	    </dependency>
 		<!--
 		<dependency>
-			<groupId>ru.it.lecm.forms.jasperforms</groupId>
-			<artifactId>jasperforms-repo</artifactId>
+			<groupId>ru.it.lecm.reports</groupId>
+			<artifactId>lecm-reports-api</artifactId>
 			<version>${project.version}</version>
 		</dependency>
 		  -->
