--- a/lecm-jasperreports-forms/pom.xml
+++ b/lecm-jasperreports-forms/pom.xml
@@ -2,21 +2,29 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-    <modelVersion>4.0.0</modelVersion>
 
-    <parent>
-        <groupId>ru.it.lecm</groupId>
-        <artifactId>platform</artifactId>
-        <version>0.1.0</version>
-    </parent>
+	<modelVersion>4.0.0</modelVersion>
 
-    <groupId>ru.it.lecm.forms.jasperforms</groupId>
-    <artifactId>jasperforms</artifactId>
-    <packaging>pom</packaging>
-    <name>Logic ECM Jasperforms Module</name>
+	<parent>
+		<groupId>ru.it.lecm</groupId>
+		<artifactId>platform</artifactId>
+		<version>0.1.0</version>
+	</parent>
 
-    <modules>
-        <module>repo</module>
-        <module>share</module>
-    </modules>
+	<!--
+	<groupId>ru.it.lecm.forms.jasperforms</groupId>
+	<artifactId>jasperforms</artifactId>
+	  -->
+	<groupId>ru.it.lecm.reports</groupId>
+	<artifactId>lecm-reports</artifactId>
+
+	<packaging>pom</packaging>
+	<name>Logic ECM Jasperforms Module</name>
+
+	<modules>
+		<module>api</module>
+		<module>repo</module>
+		<module>share</module>
+	</modules>
+
 </project>
