--- a/lecm-jasperreports-forms/repo/pom.xml
+++ b/lecm-jasperreports-forms/repo/pom.xml
@@ -4,12 +4,16 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<parent>
+		<!--
 		<groupId>ru.it.lecm.forms.jasperforms</groupId>
 		<artifactId>jasperforms</artifactId>
+		  -->
+		<groupId>ru.it.lecm.reports</groupId>
+		<artifactId>lecm-reports</artifactId>
 		<version>0.1.0</version>
 	</parent>
 
-	<artifactId>jasperforms-repo</artifactId>
+	<artifactId>lecm-reports-repo</artifactId>
 	<packaging>amp</packaging>
 	<name>Logic ECM Jasperforms Module Repo</name>
 	<description>jasperforms forms repo</description>
@@ -57,6 +61,7 @@
 			<groupId>org.slf4j</groupId>
 			<artifactId>slf4j-api</artifactId>
 		</dependency>
+
 		<dependency>
 			<groupId>net.sf.jasperreports</groupId>
 			<artifactId>jasperreports</artifactId>
@@ -66,6 +71,30 @@
 			<groupId>net.sf.jasperreports</groupId>
 			<artifactId>jasperreports-fonts</artifactId>
 			<version>4.0.0</version>
+		</dependency>
+		<dependency>
+			<groupId>org.openoffice</groupId>
+			<artifactId>juh</artifactId>
+			<version>2.1.0</version>
+			<scope>compile</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.openoffice</groupId>
+			<artifactId>jurt</artifactId>
+			<version>2.1.0</version>
+			<scope>compile</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.openoffice</groupId>
+			<artifactId>ridl</artifactId>
+			<version>2.1.0</version>
+			<scope>compile</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.openoffice</groupId>
+			<artifactId>unoil</artifactId>
+			<version>2.1.0</version>
+			<scope>compile</scope>
 		</dependency>
 
 		<dependency>
@@ -100,7 +129,14 @@
 			<scope>provided</scope>
 		</dependency>
 
+		<dependency>
+			<groupId>ru.it.lecm.reports</groupId>
+			<artifactId>lecm-reports-api</artifactId>
+			<version>${project.version}</version>
+		</dependency>
+
 		<!-- Don't add here amp dependencies as it will break amp packaging -->
+
 	</dependencies>
 
 	<build>
