--- a/lecm-jasperreports-forms/share/pom.xml
+++ b/lecm-jasperreports-forms/share/pom.xml
@@ -1,16 +1,19 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
-	<modelVersion>4.0.0</modelVersion>
-    <parent>
-        <groupId>ru.it.lecm.forms.jasperforms</groupId>
-        <artifactId>jasperforms</artifactId>
-        <version>0.1.0</version>
-    </parent>
 
-    <artifactId>jasperforms-share</artifactId>
-    <packaging>amp</packaging>
-    <name>Logic ECM Jasperforms Module Share</name>
+	<modelVersion>4.0.0</modelVersion>
+
+	<parent>
+		<groupId>ru.it.lecm.reports</groupId>
+		<artifactId>lecm-reports</artifactId>
+		<version>0.1.0</version>
+	</parent>
+
+	<artifactId>lecm-reports-share</artifactId>
+	<packaging>amp</packaging>
+	<name>Logic ECM Jasperforms Module Share</name>
+
 	<description>Logic ECM Jasperforms Module Share</description>
 	<properties>
 		<module.log.level>debug</module.log.level>
@@ -19,37 +22,38 @@
 		need to list these as a provided so that Maven doesn't download them
 		and include them in the AMP, they are provided by Alfresco
 	-->
+
 	<dependencies>
-        <dependency>
-            <groupId>org.alfresco</groupId>
-            <artifactId>alfresco-share</artifactId>
-        </dependency>
+		<dependency>
+			<groupId>org.alfresco</groupId>
+			<artifactId>alfresco-share</artifactId>
+		</dependency>
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-core</artifactId>
 		</dependency>
-        <dependency>
-            <groupId>org.springframework</groupId>
-            <artifactId>spring-beans</artifactId>
-        </dependency>
+			<dependency>
+				<groupId>org.springframework</groupId>
+				<artifactId>spring-beans</artifactId>
+		</dependency>
 		<!-- Don't add here amp dependencies as it will break amp packaging -->
 	</dependencies>
 
 	<build>
-        <plugins>
-            <!-- Needed for cross OS compatibility in acp/zip encoding -->
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-resources-plugin</artifactId>
-            </plugin>
-            <plugin>
+		<plugins>
+			<!-- Needed for cross OS compatibility in acp/zip encoding -->
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-resources-plugin</artifactId>
+			</plugin>
+			<plugin>
 				<artifactId>maven-nosnapshot-plugin</artifactId>
 				<groupId>org.alfresco.maven</groupId>
-            </plugin>
-            <plugin>
-                <groupId>org.codehaus.mojo</groupId>
-                <artifactId>buildnumber-maven-plugin</artifactId>
-            </plugin>
+			</plugin>
+			<plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>buildnumber-maven-plugin</artifactId>
+			</plugin>
 			<plugin>
 				<artifactId>maven-compiler-plugin</artifactId>
 			</plugin>
@@ -70,7 +74,7 @@
 					<exclude>**README-*</exclude>
 				</excludes>
 			</resource>
-            <resource>
+			<resource>
 				<filtering>true</filtering>
 				<directory>src/main/java</directory>
 				<excludes>
@@ -78,5 +82,5 @@
 				</excludes>
 			</resource>
 		</resources>
-    </build>
+	</build>
 </project>
