--- a/lecm-contracts/share/src/main/resources/alfresco/web-extension/ru/it/lecm/contracts/contracts.properties
+++ b/lecm-contracts/share/src/main/resources/alfresco/web-extension/ru/it/lecm/contracts/contracts.properties
@@ -22,9 +22,9 @@ contract.subject=Subject
 contract.status=Status
 contract.conclusionDate=Date of contract
 contract.dateRegProject=Date of registration of the contract
-contract.istransmit=Is transmit right
+contract.istransmit=Transfer the right to strictly related documents
 contract.creator-ref=Employee
-contract.deprive.right=Deprive the owner of rights
+contract.deprive.right=Delete the author of the participants of the document
 
 contract.additionalDocumentType=Document type
 contract.deleteReason=Delete Reason
