--- a/lecm-contracts/share/src/main/resources/alfresco/web-extension/ru/it/lecm/contracts/contracts.properties
+++ b/lecm-contracts/share/src/main/resources/alfresco/web-extension/ru/it/lecm/contracts/contracts.properties
@@ -25,6 +25,7 @@ contract.dateRegProject=Date of registration of the contract
 contract.istransmit=Transfer the right to strictly related documents
 contract.creator-ref=Employee
 contract.deprive.right=Delete the author of the participants of the document
+contract.totalAmount=Total sum
 
 contract.additionalDocumentType=Document type
 contract.deleteReason=Delete Reason
