Заготовка для ALF-972 Настраиваемая форма для работы со списком
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@2752 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-documents/share/src/main/resources/alfresco/web-extension/ru/it/lecm/documents/form.properties
+++ b/lecm-documents/share/src/main/resources/alfresco/web-extension/ru/it/lecm/documents/form.properties
@@ -41,3 +41,6 @@ header.delegation.label=Document Journal
 header.delegation.description=Document Journal
 
 form.logicecm.view=Viewing History
+
+page.documents-list=Documents List
+page.documents-list.filter=(filtered)
