--- a/lecm-contracts-fake/share/src/main/resources/alfresco/web-extension/ru/it/lecm/contracts-fake/contracts-fake.properties
+++ b/lecm-contracts-fake/share/src/main/resources/alfresco/web-extension/ru/it/lecm/contracts-fake/contracts-fake.properties
@@ -2,3 +2,8 @@ page.contracts.fake.title=Contracts
 page.contracts.fake.filter.label=(content filtered)
 header.contracts.fake.label=Contracts
 header.contracts.fake.description=Contracts
+
+page.lecm-contract-fake_document=Contracts (fake)
+button.lecm-contract-fake_document.new=New Contract Fake
+label.create-lecm-contract-fake_document=Create Contract Fake
+label.filter-lecm-contract-fake_document=Contracts (fake)
