--- a/lecm-contracts/repo/src/main/config/messages/lecm-additional-document-model.properties
+++ b/lecm-contracts/repo/src/main/config/messages/lecm-additional-document-model.properties
@@ -1,5 +1,5 @@
-lecm-additional-document_model.lecm-additional-document_additionalDocumen.title=Additional Documents
-lecm-additional-document_model.lecm-additional-document_additionalDocumen.description=Additional documents
+lecm-additional-document_model.type.lecm-additional-document_additionalDocument.title=Additional Documents
+lecm-additional-document_model.type.lecm-additional-document_additionalDocument.description=Additional documents
 lecm-additional-document_model.property.cm_name.title=Name
 lecm-additional-document_model.property.cm_name.description=Name
 lecm-additional-document_model.property.lecm-additional-document_number.title=Numbers document
