изменен механизм экспорта/импорта: настройки экспорта для справочников
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@2754 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-contractors/repo/pom.xml
+++ b/lecm-contractors/repo/pom.xml
@@ -52,13 +52,19 @@
         <dependency>
             <groupId>ru.it.lecm.base</groupId>
             <artifactId>base-repo-api</artifactId>
-            <version>0.1.0</version>
+            <version>${platform.version}</version>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>ru.it.lecm.dictionary</groupId>
+            <artifactId>dictionary-repo-api</artifactId>
+            <version>${platform.version}</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>ru.it.lecm.contractors</groupId>
             <artifactId>lecm-contractors-api</artifactId>
-            <version>0.1.0</version>
+            <version>${platform.version}</version>
         </dependency>
         <!-- Don't add here amp dependencies as it will break amp packaging -->
     </dependencies>
