--- a/lecm-calendar/repo/pom.xml
+++ b/lecm-calendar/repo/pom.xml
@@ -71,6 +71,12 @@
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
+			<groupId>ru.it.lecm.dictionary</groupId>
+			<artifactId>dictionary-repo-api</artifactId>
+			<version>${project.version}</version>
+			<scope>provided</scope>
+		</dependency>
+		<dependency>
 			<groupId>commons-lang</groupId>
 			<artifactId>commons-lang</artifactId>
 			<version>2.6</version>
