--- a/lecm-contracts/share/src/main/resources/alfresco/web-extension/ru/it/lecm/contracts/contracts.properties
+++ b/lecm-contracts/share/src/main/resources/alfresco/web-extension/ru/it/lecm/contracts/contracts.properties
@@ -56,3 +56,5 @@ button.lecm-contract_document.new=New Contract
 button.lecm-additional-document_additionalDocument.new=New Additional Document
 label.create-lecm-contract_document=Create Contract
 label.create-lecm-additional-document_additionalDocument=Create Additional Document
+label.filter-lecm-contract_document=\u0414\u043E\u0433\u043E\u0432\u043E\u0440\u0430
+label.filter-lecm-additional-document_additionalDocument=\u0414\u043E\u043A\u0443\u043C\u0435\u043D\u0442\u044B \u043A \u0434\u043E\u0433\u043E\u0432\u043E\u0440\u0430\u043C
