[ALF-939] готов отчёт "Срок прохождения маршрута документа" (подключен UI диалог с параметрами)
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@2757 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-contracts/repo/src/main/config/messages/lecm-contracts-reports-form-model.properties
+++ b/lecm-contracts/repo/src/main/config/messages/lecm-contracts-reports-form-model.properties
@@ -15,3 +15,9 @@ lecm-contract-reports_reports-forms.association.lecm-contract-reports_contracts-
 lecm-contract-reports_reports-forms.property.lecm-contract-reports_approval-discipline-start.title=Report date start
 lecm-contract-reports_reports-forms.property.lecm-contract-reports_approval-discipline-end.title=Report date end
 
+lecm-contract-reports_reports-forms.property.lecm-contract-reports_dft-reg-after.title=Registered after
+lecm-contract-reports_reports-forms.property.lecm-contract-reports_dft-reg-before.title=Before
+lecm-contract-reports_reports-forms.property.lecm-contract-reports_dft-report-type.title=Measure
+lecm-contract-reports_reports-forms.association.lecm-contract-reports_dft-contractor.title=Contractor
+lecm-contract-reports_reports-forms.association.lecm-contract-reports_dft-contract-type.title=Type
+lecm-contract-reports_reports-forms.association.lecm-contract-reports_dft-contract-subject.title=Subject
