ALF-977 Добавить бизнес-роли в качестве получателей подписки
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@2763 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-subscriptions/repo/src/main/config/messages/subscriptions.properties
+++ b/lecm-subscriptions/repo/src/main/config/messages/subscriptions.properties
@@ -12,6 +12,8 @@ lecm-subscr_subscriptionsStructure.association.lecm-subscr_destination-organizat
 lecm-subscr_subscriptionsStructure.association.lecm-subscr_destination-organization-unit-assoc.description=Organization unit
 lecm-subscr_subscriptionsStructure.association.lecm-subscr_destination-work-group-assoc.title=Work group
 lecm-subscr_subscriptionsStructure.association.lecm-subscr_destination-work-group-assoc.description=Work group
+lecm-subscr_subscriptionsStructure.association.lecm-subscr_destination-business-role-assoc.title=Business Role
+lecm-subscr_subscriptionsStructure.association.lecm-subscr_destination-business-role-assoc.description=Business Role
 lecm-subscr_subscriptionsStructure.association.lecm-subscr_notification-type-assoc.title=Notification type
 lecm-subscr_subscriptionsStructure.association.lecm-subscr_notification-type-assoc.description=Notification type
 lecm-subscr_subscriptionsStructure.association.lecm-subscr_object-type-assoc.title=Object type
