отчёты: поправлены файлы сборки
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@2767 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/server/share/pom.xml
+++ b/server/share/pom.xml
@@ -80,8 +80,10 @@
 			<scope>runtime</scope>
 		</dependency>
 		<dependency>
-			<groupId>ru.it.lecm.forms.jasperforms</groupId>
-			<artifactId>jasperforms-share</artifactId>
+			<!-- <groupId>ru.it.lecm.forms.jasperforms</groupId> -->
+			<groupId>ru.it.lecm.reports</groupId>
+			<!-- <artifactId>jasperforms-share</artifactId> -->
+			<artifactId>lecm-reports-share</artifactId>
 			<version>${platform.version}</version>
 			<type>amp</type>
 			<scope>runtime</scope>
