--- a/server/alfresco/pom.xml
+++ b/server/alfresco/pom.xml
@@ -136,8 +136,10 @@
 			<type>amp</type>
 		</dependency>
 		<dependency>
-			<groupId>ru.it.lecm.forms.jasperforms</groupId>
-			<artifactId>jasperforms-repo</artifactId>
+			<!-- <groupId>ru.it.lecm.forms.jasperforms</groupId> -->
+			<groupId>ru.it.lecm.reports</groupId>
+			<!-- <artifactId>jasperforms-repo</artifactId> -->
+			<artifactId>lecm-reports-repo</artifactId>
 			<version>${platform.version}</version>
 			<scope>runtime</scope>
 			<type>amp</type>
