--- a/lecm-contracts/share/src/main/resources/alfresco/web-extension/ru/it/lecm/contracts/contracts.properties
+++ b/lecm-contracts/share/src/main/resources/alfresco/web-extension/ru/it/lecm/contracts/contracts.properties
@@ -48,14 +48,15 @@ contracts.report.docflow-timings.title=Docflow checkpoints report
 contracts.report.success=Report formed succesfully
 contracts.report.failure=Report failed
 
-ru.it.contracts.signContractor=\u041f\u043e\u0434\u0442\u0432\u0435\u0440\u0434\u0438\u0442\u044c \u043f\u043e\u0434\u043f\u0438\u0441\u0430\u043d\u0438\u0435 \u043a\u043e\u043d\u0442\u0440\u0430\u0433\u0435\u043d\u0442\u043e\u043c?
-ru.it.contract.executed=\u041f\u043e\u0434\u0442\u0432\u0435\u0440\u0434\u0438\u0442\u0435 \u0438\u0441\u043f\u043e\u043b\u043d\u0435\u043d\u0438\u0435 \u0434\u043e\u0433\u043e\u0432\u043e\u0440\u0430.
+ru.it.contracts.signContractor=\u041F\u043E\u0434\u0442\u0432\u0435\u0440\u0434\u0438\u0442\u044C \u043F\u043E\u0434\u043F\u0438\u0441\u0430\u043D\u0438\u0435 \u043A\u043E\u043D\u0442\u0440\u0430\u0433\u0435\u043D\u0442\u043E\u043C?
+ru.it.contract.executed=\u041F\u043E\u0434\u0442\u0432\u0435\u0440\u0434\u0438\u0442\u0435 \u0438\u0441\u043F\u043E\u043B\u043D\u0435\u043D\u0438\u0435 \u0434\u043E\u0433\u043E\u0432\u043E\u0440\u0430.
 
 page.lecm-contract_document=Contracts
-page.lecm-additional-document_additionalDocument=Additional Documents
 button.lecm-contract_document.new=New Contract
-button.lecm-additional-document_additionalDocument.new=New Additional Document
 label.create-lecm-contract_document=Create Contract
+label.filter-lecm-contract_document=Contracts
+
+page.lecm-additional-document_additionalDocument=Additional Documents
+button.lecm-additional-document_additionalDocument.new=New Additional Document
 label.create-lecm-additional-document_additionalDocument=Create Additional Document
-label.filter-lecm-contract_document=\u0414\u043E\u0433\u043E\u0432\u043E\u0440\u0430
-label.filter-lecm-additional-document_additionalDocument=\u0414\u043E\u043A\u0443\u043C\u0435\u043D\u0442\u044B \u043A \u0434\u043E\u0433\u043E\u0432\u043E\u0440\u0430\u043C
+label.filter-lecm-additional-document_additionalDocument=Additional Documents
