[+] ALF-973. Инсталлятор платформы. Win 32.
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@2782 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/server/alfresco/pom.xml
+++ b/server/alfresco/pom.xml
@@ -384,7 +384,43 @@
 							<excludes>META*</excludes>
 						</configuration>
 					</execution>
-				</executions>
+                    <execution>
+                        <id>copy-repo</id>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>copy-dependencies</goal>
+                        </goals>
+                        <configuration>
+                            <includeTypes>amp</includeTypes>
+                            <outputDirectory>${project.build.directory}/../../install/amps/alfresco</outputDirectory>
+                            <overWriteReleases>true</overWriteReleases>
+                            <overWriteIfNewer>true</overWriteIfNewer>
+                            <overWriteSnapshots>true</overWriteSnapshots>
+                        </configuration>
+                    </execution>
+                    <execution>
+                        <id>copy-repo-webapp</id>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>copy</goal>
+                        </goals>
+                        <configuration>
+                            <artifactItems>
+                                <artifactItem>
+                                    <groupId>${project.groupId}</groupId>
+                                    <artifactId>${project.artifactId}</artifactId>
+                                    <version>${project.version}</version>
+                                    <type>${project.packaging}</type>
+                                    <destFileName>alfresco.war</destFileName>
+                                </artifactItem>
+                            </artifactItems>
+                            <outputDirectory>${project.build.directory}/../../install/war</outputDirectory>
+                            <overWriteReleases>true</overWriteReleases>
+                            <overWriteIfNewer>true</overWriteIfNewer>
+                            <overWriteSnapshots>true</overWriteSnapshots>
+                        </configuration>
+                    </execution>
+                </executions>
 				<dependencies>
 					<!--
 					 | This is required to be re-defined explicitly at plugin level as
