[ALF-939] Отчёт "Срок прохождения маршрута документа" [ALF-940] "Сводный отчёт по договорам"
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@2783 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-contracts/repo/src/main/config/messages/lecm-contracts-reports-form-model.properties
+++ b/lecm-contracts/repo/src/main/config/messages/lecm-contracts-reports-form-model.properties
@@ -15,9 +15,37 @@ lecm-contract-reports_reports-forms.association.lecm-contract-reports_contracts-
 lecm-contract-reports_reports-forms.property.lecm-contract-reports_approval-discipline-start.title=Report date start
 lecm-contract-reports_reports-forms.property.lecm-contract-reports_approval-discipline-end.title=Report date end
 
+# \u0434\u043b\u044f \u043e\u0442\u0447\u0451\u0442\u0430 "\u0421\u0440\u043e\u043a\u0438 \u043f\u0440\u043e\u0445\u043e\u0436\u0434\u0435\u043d\u0438\u044f \u043c\u0430\u0440\u0448\u0440\u0443\u0442\u0430"
 lecm-contract-reports_reports-forms.property.lecm-contract-reports_dft-reg-after.title=Registered after
 lecm-contract-reports_reports-forms.property.lecm-contract-reports_dft-reg-before.title=Before
+
 lecm-contract-reports_reports-forms.property.lecm-contract-reports_dft-report-type.title=Measure
+
 lecm-contract-reports_reports-forms.association.lecm-contract-reports_dft-contractor.title=Contractor
 lecm-contract-reports_reports-forms.association.lecm-contract-reports_dft-contract-type.title=Type
 lecm-contract-reports_reports-forms.association.lecm-contract-reports_dft-contract-subject.title=Subject
+
+# \u0434\u043b\u044f \u043e\u0442\u0447\u0451\u0442\u0430 "\u0421\u0432\u043e\u0434\u043d\u044b\u0439 \u043e\u0442\u0447\u0451\u0442 \u043f\u043e \u0434\u043e\u0433\u043e\u0432\u043e\u0440\u0430\u043c"
+lecm-contract-reports_reports-forms.property.lecm-contract-reports_dfc-reg-after.title=Registered after
+lecm-contract-reports_reports-forms.property.lecm-contract-reports_dfc-reg-before.title=Before
+
+lecm-contract-reports_reports-forms.property.lecm-contract-reports_dfc-start-after.title=Start date after
+lecm-contract-reports_reports-forms.property.lecm-contract-reports_dfc-start-before.title=Before
+
+lecm-contract-reports_reports-forms.property.lecm-contract-reports_dfc-sum-low.title=Contract sum from
+lecm-contract-reports_reports-forms.property.lecm-contract-reports_dfc-sum-up.title=Upto
+
+lecm-contract-reports_reports-forms.property.lecm-contract-reports_dfc-report-type.title=Measure
+
+lecm-contract-reports_reports-forms.association.lecm-contract-reports_dfc-contractor.title=Contractor
+lecm-contract-reports_reports-forms.association.lecm-contract-reports_dfc-contract-type.title=Type
+lecm-contract-reports_reports-forms.association.lecm-contract-reports_dfc-contract-subject.title=Subject
+lecm-contract-reports_reports-forms.association.lecm-contract-reports_dfc-contract-initiator.title=Author
+
+
+# \u0441\u043f\u0438\u0441\u043e\u043a \u0432\u0430\u0440\u0438\u0430\u043d\u0442\u043e\u0432 \u043f\u043e\u0441\u0442\u0440\u043e\u0435\u043d\u0438\u044f \u0441\u0432\u043e\u0434\u043d\u044b\u0445 \u043e\u0442\u0447\u0451\u0442\u043e\u0432 \u043f\u043e \u0434\u043e\u0433\u043e\u0432\u043e\u0440\u0430\u043c
+listconstraint.lecm-contract-reports_dft-report-kind.contractKind=Type
+listconstraint.lecm-contract-reports_dft-report-kind.contractTheme=Subject
+listconstraint.lecm-contract-reports_dft-report-kind.contractor=Contractor
+listconstraint.lecm-contract-reports_dft-report-kind.initiator=Initiator/Author
+
