--- a/lecm-contracts/share/src/main/resources/alfresco/web-extension/ru/it/lecm/contracts/contracts.properties
+++ b/lecm-contracts/share/src/main/resources/alfresco/web-extension/ru/it/lecm/contracts/contracts.properties
@@ -45,6 +45,7 @@ lecm-additional-document_contractType=Contract Type
 contracts.report.contracts-list.title=Contracts list report
 contracts.report.approval-discipline.title=Approval discipline report
 contracts.report.docflow-timings.title=Docflow checkpoints report
+contracts.report.docflow-counters.title=Summary docflow
 contracts.report.success=Report formed succesfully
 contracts.report.failure=Report failed
 
